edit the wrong links

--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Xiaowei Zhou"
 title_separator          : "-"
 name                     : &name "Xiaowei Zhou"
 description              : &description "personal description"
-url                      : https://zhouxiaowei1120.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://zxwedu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "zhouxiaowei1120/zhouxiaowei1120.github.io"
+repository               : "zxwedu/zxwedu.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "zhouxiaowei1120"
+  github           : "zxwedu"
   google_plus      :
   keybase          :
   instagram        :
